# sim_camera

./: CMakeLists.txt  README.md  package.xml
config/: camera_info.yaml  camera_params.yaml
include/: keyboard_controller.hpp  sim_camera.hpp
launch/: sim_camera_conditional.launch.py  sim_camera_only.launch.py  sim_camera_with_keyboard.launch.py
scripts/: start_sim_camera.sh
sim_camera/: .gitignore
sim_camera/config/: camera_params.yaml
sim_camera/launch/: sim_camera.launch.py  sim_camera_conditional.launch.py
sim_camera/src/: camera_modes.cpp  sim_camera_node.cpp
src/: camera_modes.cpp  keyboard_controller.cpp  keyboard_controller_main.cpp  sim_camera_node.cpp
videos/: README.md
